final module notification
